--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <!-- meta -->
   <meta charset="utf-8" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta name="description" content="How people define digital humanities." />
-  <meta name="author" content="Jason A. Heppler" />
+  <meta name="description" content="Messing Around on a Tuesday." />
+  <meta name="author" content="Jenna Emslie" />
   <meta name="keywords" content="digital history, digital humanities" />
   <meta name="copyright" content="Copyright (c) 2017 Jason Hepler" />
   <title>What Is Digital Humanities?</title>
@@ -42,9 +42,9 @@
 
   <style type="text/css">
   body {
-    color: #434343;
+    color: #8908E0;
     background: #fff;
-    line-height: 16px;
+    line-height: 35px;
     margin: 40px;
     font-family: "Open Sans", sans-serif;
   }
